可偵測筍子