@@ -1,41 +1,85 @@
 package com.xiaobantian.service;
 
-import lombok.RequiredArgsConstructor;
-import org.springframework.ai.document.Document;
-import org.springframework.ai.vectorstore.SearchRequest;
-import org.springframework.ai.vectorstore.VectorStore;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.xiaobantian.dto.KnowledgeResponse;
+import com.xiaobantian.model.KnowledgeItem;
+import com.xiaobantian.repository.KnowledgeRepository;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
-@RequiredArgsConstructor
 public class KnowledgeService {
 
-    private final VectorStore vectorStore;
+    private final KnowledgeRepository knowledgeRepository;
+    private final ObjectMapper objectMapper;
 
-    public String search(String query, int topK) {
-        List<Document> documents = searchRaw(query, topK);
-
-        return documents.stream()
-                .map(Document::getText)
-                .filter(text -> text != null && !text.isBlank())
-                .collect(Collectors.joining("\n\n"));
+    public KnowledgeService(KnowledgeRepository knowledgeRepository, ObjectMapper objectMapper) {
+        this.knowledgeRepository = knowledgeRepository;
+        this.objectMapper = objectMapper;
     }
 
-    public List<Document> searchRaw(String query, int topK) {
-        return vectorStore.similaritySearch(
-                SearchRequest.builder()
-                        .query(query)
-                        .topK(topK)
-                        .build()
-        );
+    public KnowledgeResponse getKnowledge(String detectedClass, String region) {
+        try {
+            log.info("[KnowledgeService] start detectedClass={}, region={}", detectedClass, region);
+
+            if (detectedClass == null || detectedClass.isBlank()) {
+                log.warn("[KnowledgeService] detectedClass is blank");
+                return KnowledgeResponse.empty();
+            }
+
+            String finalRegion = (region == null || region.isBlank()) ? "小半天" : region;
+            log.info("[KnowledgeService] finalRegion={}", finalRegion);
+
+            KnowledgeItem item = knowledgeRepository
+                .findByDetectedClassAndRegion(detectedClass, finalRegion)
+                .orElseGet(() -> knowledgeRepository.findByDetectedClass(detectedClass).orElse(null));
+
+            log.info("[KnowledgeService] item found={}", item != null);
+
+            if (item == null) {
+                log.warn("[KnowledgeService] knowledge item not found for detectedClass={}, region={}", detectedClass, finalRegion);
+                return KnowledgeResponse.unknown(detectedClass);
+            }
+
+            List<String> relatedClasses = parseStringList(item.getRelatedClasses());
+            log.info("[KnowledgeService] relatedClasses={}", relatedClasses);
+
+            List<KnowledgeResponse.RelatedItem> relatedItems = relatedClasses.isEmpty()
+                ? Collections.emptyList()
+                : knowledgeRepository.findByDetectedClassInAndRegion(relatedClasses, finalRegion)
+                    .stream()
+                    .map(k -> new KnowledgeResponse.RelatedItem(k.getDetectedClass(), k.getTitle()))
+                    .collect(Collectors.toList());
+
+            log.info("[KnowledgeService] relatedItems size={}", relatedItems.size());
+
+            KnowledgeResponse response = KnowledgeResponse.from(item, relatedItems);
+            log.info("[KnowledgeService] response built successfully for detectedClass={}", detectedClass);
+
+            return response;
+        } catch (Exception e) {
+            log.error("[KnowledgeService] getKnowledge failed detectedClass={}, region={}, message={}",
+                    detectedClass, region, e.getMessage(), e);
+            throw e;
+        }
     }
 
-    public void addKnowledge(String content, String source) {
-        Document document = new Document(content, Map.of("source", source));
-        vectorStore.add(List.of(document));
+    private List<String> parseStringList(String json) {
+        if (json == null || json.isBlank()) {
+            return Collections.emptyList();
+        }
+
+        try {
+            return objectMapper.readValue(json, new TypeReference<List<String>>() {});
+        } catch (Exception e) {
+            log.warn("[KnowledgeService] parseStringList failed, json={}", json, e);
+            return Collections.emptyList();
+        }
     }
 }
